--- a/src/scicookie/{{cookiecutter.project_slug}}/conda/dev.yaml
+++ b/src/scicookie/{{cookiecutter.project_slug}}/conda/dev.yaml
@@ -6,8 +6,10 @@ dependencies:
   - python <3.11
 {%- if cookiecutter.build_system == 'poetry' %}
   - poetry
-{%- else %}
+{%- elif cookiecutter.build_system == 'flit' %}
   - flit
+{%- else %}
+  - meson-python
 {%- endif %}
   - nodejs  # used by semantic-release
   - shellcheck
