--- a/src/scicookie/{{cookiecutter.project_slug}}/conda/dev.yaml
+++ b/src/scicookie/{{cookiecutter.project_slug}}/conda/dev.yaml
@@ -8,7 +8,7 @@ dependencies:
   - poetry
 {%- elif cookiecutter.build_system == 'flit' %}
   - flit
-{%- else %}
+{%- elif cookiecutter.build_system == 'mesonpy' %}
   - meson-python
 {%- endif %}
   - nodejs  # used by semantic-release
