improve mesonpy-pyproject.toml

--- a/src/scicookie/{{cookiecutter.project_slug}}/build-system/mesonpy-pyproject.toml
+++ b/src/scicookie/{{cookiecutter.project_slug}}/build-system/mesonpy-pyproject.toml
@@ -87,6 +87,8 @@ dependencies = [
 # if you want to use docker-compose from your system, remove compose-go here
     "compose-go>=2.18.1",
 {% endif %}
+    "ipython<8",
+    "ipykernel>=6.0.0",
 {%- if cookiecutter.documentation_engine == 'mkdocs' -%}
     "Jinja2>=3.1.2",
     "mkdocs>=1.4.3",
